# solas

./: .gitignore  Cargo.toml  README.md
examples/cube/: main.rs
examples/sphere/: main.rs
src/: lib.rs  main.rs
src/base/: bound.rs  bvh.rs  camera.rs  intersect.rs  light.rs  material.rs  mod.rs  object.rs  optics.rs  random.rs  ray.rs  sampling.rs  tone_mapping.rs
src/base/bvh/: mi_sah.rs  sah.rs
src/bvh/: aabb.rs  bvh.rs  mod.rs
src/format/: image_buff.rs  image_data.rs  image_file.rs  mod.rs
src/material/: background.rs  bsdf.rs  mod.rs
src/object/: mesh.rs  mod.rs  plane.rs  sphere.rs
src/object/mesh/: cube.rs  obj.rs
src/renderer/: renderer.rs
src/scene/: canvas.rs  mod.rs  scene.rs  scene_load.rs
