[package]
name = "solas"
version = "0.1.0"
authors = ["dlingyang <ceamel@hotmail.com>"]
edition = "2024"
repository = "https://github/dlinyang/ultraviolet_ray"
categories = ["graphics"]

[lib]
name = "solas"
path = "src/lib.rs"

[dependencies]
num = "0.4.3"
image = "*"
gk_math = {git = "https://github.com/dlinyang/gk_math"}
rayon = "1.12.0"

[profile.dev.package.gk_math]
opt-level = 2

[[example]]
 name = "sphere"

[[example]]
name = "cube"
